--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -703,14 +703,11 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
           <div class="menu">
 
             <div class="item">
-<a class="sub-btn"><i class='far fa-check-circle'></i>DOWNLOADER<i class="fas fa-angle-right dropdown"></i></a>
-<div class="sub-menu">
+<a class="sub-item" target="_blank" href="/api/playmp4?query=vmz baka&username=<%= user.username %>&key=<%= user.key %>"
+    target="_blank">Youtube MP4</a>
 
-<a class="sub-item" target="_blank" href="/pedrozz-API/playmp4?query=vmz baka&username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">PLAY VÍDEO</a>
-
-<a class="sub-item" target="_blank" href="/api/playmp3?query=minato 7mz&username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">PLAY AUDIO</a>
+<a class="sub-item" target="_blank" href="/api/playmp3?query=vmz baka&username=<%= user.username %>&key=<%= user.key %>"
+    target="_blank">Youtube MP3</a>
     
 <a class="sub-item" target="_blank" href="/api/tiktok?videoUrl=https://vm.tiktok.com/ZMjLFBD7e/&username=<%= user.username %>&key=<%= user.key %>"
     target="_blank">TikTok Video</a>
