--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -702,15 +702,16 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
 <hr>
           <div class="menu">
 
-            <div class="item">
-<a class="sub-item" target="_blank" href="/api/playmp4?query=vmz baka&username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">Youtube MP4</a>
+<a class="sub-item" target="_blank" href="/api/playmp3?query=7mz rap do minato&username=<%= user.username %>&key=<%= user.key %>"
+    target="_blank">PLAY</a>
 
-<a class="sub-item" target="_blank" href="/api/playmp3?query=vmz baka&username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">Youtube MP3</a>
+            <div class="item">
+<a class="sub-item" target="_blank" href="/api/playmp4?query=7mz rap do minato&username=<%= user.username %>&key=<%= user.key %>"
+    target="_blank">PLAY VD</a>
+
     
 <a class="sub-item" target="_blank" href="/api/tiktok?videoUrl=https://vm.tiktok.com/ZMjLFBD7e/&username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">TikTok Video</a>
+    target="_blank">TIKTOK VÍDEO</a>
   
 
 <a class="dropdown-item" target="_blank" href="/18/travazap?username=<%= user.username %>&key=<%= user.key %>" target="_blank">Foto pra perfil</a>
