--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -11,7 +11,7 @@
  <meta name='viewport' content='width=device-width, initial-scale=1'>
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   <link rel="stylesheet" href="/css/style.css">
-<link rel="shortcut icon" href="https://telegra.ph/file/df3c2ebe1d9b6417c2a05.jpg" type="image/x-icon" />
+<link rel="shortcut icon" href="https://telegra.ph/file/38c6d30cc208a8cc9d228.jpg" type="image/x-icon" />
   <title>Pedrozz - API2</title>
   
   <style>
@@ -702,17 +702,19 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
 <hr>
           <div class="menu">
 
-<a class="sub-item" target="_blank" href="/api/playmp3?query=7mz rap do minato&username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">PLAY</a>
-
             <div class="item">
-<a class="sub-item" target="_blank" href="/api/playmp4?query=7mz rap do minato&username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">PLAY VD</a>
+<a class="sub-btn"><i class='far fa-check-circle'></i>DOWNLOADER<i class="fas fa-angle-right dropdown"></i></a>
+<div class="sub-menu">
 
+
+<a class="sub-item" target="_blank" href="/api/playmp3?query=minato 7mz&username=<%= user.username %>&key=<%= user.key %>"
+    target="_blank">PLAY AUDIO</a>
+    
+<a class="sub-item" target="_blank" href="/api/playmp4?query=vmz baka&username=<%= user.username %>&key=<%= user.key %>"
+    target="_blank">PLAY VÍDEO</a>
     
 <a class="sub-item" target="_blank" href="/api/tiktok?videoUrl=https://vm.tiktok.com/ZMjLFBD7e/&username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">TIKTOK VÍDEO</a>
-  
+    target="_blank">TikTok Video</a>
 
 <a class="dropdown-item" target="_blank" href="/18/travazap?username=<%= user.username %>&key=<%= user.key %>" target="_blank">Foto pra perfil</a>
 
