--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -829,12 +829,14 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
 <a class="sub-btn"><i class='far fa-check-circle'></i>BOTS DE WHATSAPP<i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
 
-  <a href="https://www.mediafire.com/file/jcq97y6aax7376k/akame_bot.zip/file">Akame - Bot</a>
+  <a href="https://fir3.net/Akame-bot">Akame - Bot</a>
   
-  <a href="https://www.mediafire.com/file/xhqqvr50n25phrx/Laura_Privat_V2.zip/file">Laura Privat V2</a>
-  
-  <a href="canvas/trigger?url=https://telegra.ph/file/71f0b7f75b12b61178d8a.jpg&apikey=pedrozz13">Gasparzinho-base V2</a>
+  <a href="#">Laura Privat V3</a>
 
+  <a href="https://fir3.net/Aurora-bot">AURORA BOT V1</a>
+
+  <a href="https://pedrozz-api.onrender.com/">Pedrozz-Api(ofc)</a>
+  
             </div>
             </div>
 <br></br>         
