--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -890,7 +890,7 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
   <div id="welcomeBox" class="welcome-box">
     <div class="close-btn" onclick="closeWelcomeBox()">X</div>
     <img src="https://telegra.ph/file/2f9c1f632b7f7790f3423.jpg" class="welcome-image" alt="Usuário">
-    <p class="welcome-text">Bem vindo a nossa REST API</p>
+    <p class="welcome-text">Bem vindo a nossa REST API <%= user.username %></p>
     <br></br>
    <p class="welcome-text">Feita com ❤️ por Pedrozz</p>
   </div>
@@ -936,96 +936,8 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
 </div>
 <!-- Fim Contador de visitas -->      
   <br></br>
-  <section>
-  <div class="pedrozz2">
-    <h3>Na programação, cada bug é uma oportunidade de aprendizado. Veja os erros como desafios a serem superados, e cada correção como um passo rumo à maestria.</h3>
-  </div>
-</section>
-    <section>
-        <div class="pedrozz2" id="container-wrapper">
-          <div id="demo" class="alert alert-dark alert-dismissible" role="alert">
-            <div id="browser_info"></div>
-            <script>
-              let arrBulan = [
-                "Janeiro",
-                "Fevereiro",
-                "Março",
-                "Abril",
-                "Maio",
-                "Junho",
-                "Julho",
-                "Agosto",
-                "Setembro",
-                "Outubro",
-                "Novembro",
-                "Dezembro",
-              ];
-              let txt = "";
-              txt +=
-                "<p><b>Código do navegador</b>: " +
-                navigator.appCodeName +
-                "</p>";
-              txt += "<p><b>Nome do navegador</b>: " + navigator.appName + "</p>";
-              
-              txt += "<p><b>Navegador Online</b>: " + navigator.onLine + "</p>";
-              txt += "<p><b>Plataforma</b>: " + navigator.platform + "</p>";
-              txt += "<p><b>Insformaçoes do usuário</b>: " + navigator.userAgent + "</p>";
-              let text_el = document.querySelector("div#browser_info");
-              setInterval(() => {
-                var d = new Date();
-                const jam = d.getHours().toString().padStart(2, 0);
-                const menit = d.getMinutes().toString().padStart(2, 0);
-                const detik = d.getSeconds().toString().padStart(2, 0);
-                const tgl = d.getDate();
-                const bln = d.getMonth();
-                const thn = d.getFullYear();
-                const bulan = arrBulan[bln];
-                text_el.innerHTML =
-                  txt +
-                  "<b>Data</b>: " +
-                  jam +
-                  ":" +
-                  menit +
-                  ":" +
-                  detik +
-                  "~" +
-                  tgl +
-                  "-" +
-                  bulan +
-                  "-" +
-                  thn +
-                  "<br>Seja Bem vindo de volta Usuário!";
-              }, 250);
-            </script>
-          </div>
-        </section>
+  
         
-
-  
-  
-</div>
-
-<div class="tutotxt">
-  <div class="menuzin">
-    <h4>Inscreva-se nos canais</h4><br>
-    <details>
-    <summary>Parceiros</summary>
-      
-      <br><hr><br>
-      <a href="https://www.youtube.com/@clovermods"><li class='far fa-user-circle'> Clover-Mods </li></a>
-      <br><br><hr><br
-      <br><br><hr><br>
-      <a href="https://www.youtube.com/@Pedrozzmods"><li class='far fa-user-circle'>  Pedrozz Mods</li></a>
-      <br><br><hr><br>
-      <a href="#"><li class='far fa-user-circle'>  .</li></a>
-      <br><br><hr>
-      
-    </details>
-  </div>
-</div>
-
-
-</div>
 
 
 <div class="tutotxt">
@@ -1074,7 +986,7 @@ Um 'bot' – abreviatura de robô – é um programa de software que executa tar
           max-width: 600px;
           margin: 0 auto;
           padding: 20px;
-          background-color: skyblue;
+          background-color: black;
           border-radius: 10px;
           box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -1091,7 +1003,7 @@ Um 'bot' – abreviatura de robô – é um programa de software que executa tar
         }
         .user-name1 {
           font-size: 16px;
-          color: black;
+          color: white;
         }
         hr1 {
           border: none;
@@ -1110,7 +1022,7 @@ Um 'bot' – abreviatura de robô – é um programa de software que executa tar
             <% topUsers.sort((a, b) => b.total - a.total).forEach(function(user) { %><br>
             <div class="user-info1">
               <img class="user-photo1" src="<%= user.ft %>" alt="Foto do Usuário">
-              <div class="user-name1">@<%= user.username %>: <%= user.saldo %></div>
+              <div class="user-name1">@<%= user.username %>: <%= user.total %></div>
             </div>
             <hr><br>
             <% }); %>
