--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -702,8 +702,8 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
 <hr>
           <div class="menu">
 
-            <div class="item">
-<a class="sub-btn"><i class='far fa-check-circle'></i>DOWNLOADER<i class="fas fa-angle-right dropdown"></i></a>
+           <div class="item">
+<a class="sub-btn"><i class='fas fa-download'></i>DOWNLOADER<i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
 
 
@@ -724,7 +724,7 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
             </div>
             <br></br>
             <div class="item">
-<a class="sub-btn"><i class='far fa-check-circle'></i>SFW<i class="fas fa-angle-right dropdown"></i></a>
+<a class="sub-btn"><i class='far fa-laugh-wink'></i>SFW<i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
 
 <a class="dropdown-item" target="_blank" href="/anime/cosplay?username=<%= user.username %>&key=<%= user.key %>" target="_blank">Anime Cosplay</a>
@@ -763,7 +763,7 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
 </div>
 <br></br>
             <div class="item">
-<a class="sub-btn"><i class='far fa-check-circle'></i>NSFW<i class="fas fa-angle-right dropdown"></i></a>
+<a class="sub-btn"><i class='far fa-grin-hearts'></i>NSFW<i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
   <a class="dropdown-item" target="_blank" href="/18/video?username=<%= user.username %>&key=<%= user.key %>" target="_blank">Video +18</a>
 
@@ -800,33 +800,13 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
 
            
             <br></br>
-            <div class="item">
-<a class="sub-btn"><i class='far fa-check-circle'></i>WALLPAPERS<i class="fas fa-angle-right dropdown"></i></a>
-<div class="sub-menu">
-
-<a class="sub-item" target="_blank" href="wallpapernime?username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">WALLPAPER-ANIME</a>
-    
-<a class="sub-item" target="_blank" href="GameWallp?username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">WALLPAPER-GAME</a>    
-    
-<a class="sub-item" target="_blank" href="satanic?username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">WALLPAPER-SATANIC</a>    
-    
-<a class="sub-item" target="_blank" href="aesthetic?username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">WALLPAPER-AESTHETIC</a>        
-    
-<a class="sub-item" target="_blank" href="bonek?username=<%= user.username %>&key=<%= user.key %>"
-    target="_blank">CHUCK</a>            
-            </div>
-            </div>
-<br></br>
+           
 
 <br></br> 
 <br></br>
          
 <div class="item">
-<a class="sub-btn"><i class='far fa-check-circle'></i>BOTS DE WHATSAPP<i class="fas fa-angle-right dropdown"></i></a>
+<a class="sub-btn"><i class='fas fa-robot'></i>BOTS DE WHATSAPP<i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
 
   <a href="https://fir3.net/Akame-bot">Akame - Bot</a>
@@ -834,8 +814,14 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
   <a href="#">Laura Privat V3</a>
 
   <a href="https://fir3.net/Aurora-bot">AURORA BOT V1</a>
+  
+  <a href="https://4br.me/Baselimpa">Silver stars</a>
+  
+  <a href="https://fir3.net/Packdecase">Pack case</a>
+  
+  <a href="https://fir3.net/Packdecasev2">Pack case2</a>
 
-  <a href="https://pedrozz-api.onrender.com/">Pedrozz-Api(ofc)</a>
+  <a href="https://pedrozz-api2.onrender.com/">Pedrozz-Api2</a>
   
             </div>
             </div>
@@ -844,9 +830,9 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
             <hr>
             <br>
 <div class="item">
-  <a class="sub-btn"><i class='fa fa-user-circle'></i><i class="sup">Suporte</i><i class="fas fa-angle-right dropdown"></i></a>
+  <a class="sub-btn"><i class='fa fa-headset'></i><i class="sup">Suporte</i><i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
-<a href="http://wa.me/556199317165">Pedrozz</a>
+<a class="fa fa-phone-square" href="http://wa.me/556199317165">-PDZ_MODS</a>
 </div>
 </div>
 
