--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -262,7 +262,30 @@ background-color: black;
   </form>
 </center>
 
+  <br><br><br>
+<div class="tutotxt">
+<div class="ip">
+<div class="card">
+<div class="card-body">
+<h5 class="font-weight-bold text-danger text-uppercase"></h5>
+<h3 style="color: red;" class="font-weight-bold">Suas Informações ↯</h3>
+    <div class="video-container">
+    <center>
+    </center>
+    <h4>NAME: <%= user.username %></h4>
+    <h4>Saldo: <%= user.saldo %></h4>
+    <h4>KEY: <%= user.key %></h4>
+  </form>
+    </center>
+    </div>
+</div>
+</div>
+</div>
+</div>
   
+  
+  
+</div>
 <!---
             <section3>
       <div class="container3">
