--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -12,7 +12,7 @@
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   <link rel="stylesheet" href="/css/style.css">
 <link rel="shortcut icon" href="https://telegra.ph/file/38c6d30cc208a8cc9d228.jpg" type="image/x-icon" />
-  <title>Pedrozz - API2</title>
+  <title>Laura-api</title>
   
   <style>
   @keyframes popUp {
@@ -696,7 +696,7 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
             <i class="fas fa-times"></i>
           </div>
             <div class="txt">
-<i class="fa fa-cog fa-spin fa-3x fa-fw"></i><i>Pedrozz-API2</i>
+<i class="fa fa-cog fa-spin fa-3x fa-fw"></i><i>LAura - Api </i>
             </div>
 <br>
 <hr>
@@ -849,7 +849,7 @@ document.getElementById("btn-purpura").addEventListener("click", function(){
 
     </header>
 <div class="cabeca">
-  <p class="pedrozz"> Pedrozz - Api</p>
+  <p class="pedrozz"> Laura - Api </p>
 </div>
   
 <div tabindex="0" class="content" onfocus="closeSidebar()" id="content">
