--- a/views/valores.html
+++ b/views/valores.html
@@ -8133,7 +8133,7 @@
                   <li>Limit 100 / dia</li>
                   <li>Não Expira</li>
                 </ul>
-                <a href="/login" class="btn btn-primary">Criar Sua Conta</a>
+                <a href="/" class="btn btn-primary">Criar Sua Conta</a>
               </div>
             </div>
             <div class="card">
