--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Webleb</title>
+  <title>Login</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
@@ -293,11 +293,11 @@
                         <form action="/paginaPrincipal" method="post">
                           <h4 class="mb-4 pb-3">LOGIN</h4>
                         <div class="form-group">
-                          <input type="text" class="form-style" placeholder="Nome"  id="username" name="username" required>
+                          <input type="text" class="form-style" placeholder="Seu nome"  id="username" name="username" required>
                             <i class="input-icon uil uil-user"></i>
                           </div>	
                           <div class="form-group mt-2">
-                            <input type="password" class="form-style" placeholder="senha"  id="password" name="password" required>
+                            <input type="password" class="form-style" placeholder="sua senha"  id="password" name="password" required>
                             <i class="input-icon uil uil-lock-alt"></i>
                           </div>
                            <button class="btn mt-4">Prosseguir</button>
@@ -315,11 +315,11 @@
                             <i class="input-icon uil uil-user"></i>
                           </div>
                           <div class="form-group mt-2">
-                            <input type="password" class="form-style" placeholder="Senha" id="password" name="password" required>
+                            <input type="password" class="form-style" placeholder="Sua senha" id="password" name="password" required>
                             <i class="input-icon uil uil-lock-alt"></i>
                           </div>
                             <div class="form-group mt-2">
-                              <input type="key" class="form-style" id="key" placeholder="Insira Sua Chave" name="key" required>
+                              <input type="key" class="form-style" id="key" placeholder="Key personalizada" name="key" required>
                               <i class="input-icon uil uil-lock-alt"></i>
                             </div>
                              <button class="btn mt-4">Registrar</button>
