--- a/views/login.html
+++ b/views/login.html
@@ -11,18 +11,21 @@
   <style>
 
     @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
-    body{
+       body{
       font-family: 'Poppins', sans-serif;
       font-weight: 300;
       line-height: 1.7;
-      color: #ffeba7;
+      color: #3c9ffb;
       background-color: #1f2029;
+      overflow: hidden;
+      height: 100vh;
+      background: radial-gradient(ellipse at bottom, #1B2735 0%, #12141d 100%);
     }
     a:hover {
       text-decoration: none;
     }
     .link {
-      color: #ffeba7;
+      color: #3c9ffb;
     }
     .link:hover {
       color: #c4c3ca;
@@ -61,7 +64,7 @@
       padding: 0;
       margin: 10px auto;
       cursor: pointer;
-      background-color: #ffeba7;
+      background-color: #f5f5f5;
     }
     .checkbox:checked + label:before,
     .checkbox:not(:checked) + label:before{
@@ -70,8 +73,8 @@
       width: 36px;
       height: 36px;
       border-radius: 50%;
-      color: #ffeba7;
-      background-color: #020305;
+      color: #ededed;
+      background-color: #3c9ffb;
       font-family: 'unicons';
       content: '\eb4f';
       z-index: 20;
@@ -183,12 +186,12 @@
       display: -ms-inline-flexbox;
       display: inline-flex;
       align-items: center;
-      background-color: #ffeba7;
+      background-color: #3c9ffb;
       color: #000000;
     }
     .btn:hover{  
       background-color: #000000;
-      color: #ffeba7;
+      color: #3c9ffb;
       box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
     }
 
