--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,185 +1,374 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Usuarios</title>
-<style>
-  body {
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white; /* Cor de fundo */
-  }
-
-  section {
-    padding: 40px;
-    text-align: center;
-  
-    border-radius: 10px;
-    color: black; /* Cor do texto */
-  }
-  .video-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1; /* Colocar o vídeo atrás do conteúdo */
-    overflow: hidden;
-  }
-
-  .video-background video {
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  .content {
-    position: relative;
-    z-index: 1; /* Colocar o conteúdo na frente do vídeo */
-
-  }
-  .card {
-    width: 350px;
-    height: 350px;
-    
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .title, .more {
-    padding: 10px 15px;
-  }
-
-  .user {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 15px;
-  }
-
-  .user__content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-grow: 1;
-  }
-
-  .user__container {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .title {
-    font-weight: 900;
-    font-size: 1.3em;
-    color: black;
-  }
-
-  .name {
-    font-weight: 800;
-    color: black;
-  }
-
-  .username {
-    font-size: .9em;
-    color: black;
-  }
-
-  .image {
-    width: 60px;
-    height: 60px;
-    background: rgb(22,19,70);
-    background: linear-gradient(295deg, rgba(22,19,70,1) 41%, rgba(89,177,237,1) 100%);
-    border-radius: 50%;
-    margin-right: 15px;
-  }
-
-  .follow {
-    border: none;
-    border-radius: 25px;
-    background-color: #0f1113;
-    color: white;
-    padding: 8px 15px;
-    font-weight: 700;
-  }
-
-  .more {
-    display: block;
-    text-decoration: none;
-    color: rgb(29, 155, 240);
-    font-weight: 800;
-  }
-
-  .user:hover {
-    background-color: #b3b6b6;
-  }
-
-  .more:hover {
-    background-color: #b3b6b6;
-    border-radius: 0px 0px 15px 15px;
-  }
-
-  .follow:hover {
-    background-color: #2c3136;
-  }
-  .user-photo1 {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-  }
-  .user-name1 {
-    font-size: 16px;
-    color: white;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>informações</title>
 </head>
-  <div class="video-background">
-    <video autoplay muted loop>
-      <source src="https://telegra.ph/file/61b159ff9a13addc57a21.mp4" type="video/mp4">
-    </video>
-  </div>
+<style>
+        *{
+          margin: 0;
+        }
+        body{
+    font-family: Arial, Helvetica, sans-serif;
+    background: #310404
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: white;
+  }
+
+      .video-background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1; /* Colocar o vídeo atrás do conteúdo */
+      overflow: hidden;
+    }
+    
+    .video-background video {
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    
+    .content {
+      position: relative;
+      z-index: 1; /* Colocar o conteúdo na frente do vídeo */
+      
+    }
+body.dark-theme {
+background-color: black;
+}
+.dark-theme .video-container {
+  background-color: #444; /* Cor de fundo do contêiner de vídeo escuro */
+}
+
+.dark-theme .header {
+  background-color: #444; /* Cor de fundo do cabeçalho escuro */
+}
+
+        h1 {
+            
+        }
+        h3 {
+        
+        }
+        .menu-container {
+            position: fixed;
+            top: 0;
+            left: -100%; /* Start off hidden */
+            height: 100%;
+            width: 180px;
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            transition: left 0.3s ease-in-out;
+        }
+
+        .menu-container.show-menu {
+            left: 0; /* Show the menu when class 'show-menu' is added */
+        }
+
+        .menu-container button {
+            display: block;
+            width: 100%;
+            margin-bottom: 10px;
+            padding: 10px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .menu-container button:hover {
+            background-color: #0056b3;
+        }
+
+        .menu-toggle {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            font-size: 24px;
+            cursor: pointer;
+            display: block;
+            
+            
+        }
+        .header{
+            background-color: #333;
+            justify-content: space-between;
+            padding: 0 10%;
+            height: 3.5em;
+            margin: 0;
+            box-shadow: 1px 1px 4px black;
+        }
+        .menu-toggle.hide-menu {
+            display: none; /* Hide the menu toggle when class 'hide-menu' is added */
+        }
+
+        .close-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            font-size: 24px;
+            cursor: pointer;
+        }
+
+        .video-container {
+            margin-left: 200px; /* to create space for the menu */
+            max-width: 99%;
+            margin: 20px auto;
+            margin: 15px;
+            background-color: #444;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+            padding: 20px;
+            border-radius: 8px;
+            
+            box-shadow: 1px 1px 1px black;
+        }
+        input[type="text"] {
+            width: 90%;
+            padding: 10px;
+            margin: 10px 0;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            background-
+            color: black;
+            text-align: center;   
+            }
+        input[type="password"] {
+            width: 90%;
+            padding: 10px;
+            margin: 10px 0;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            background-
+            color: black;
+        }
+        button[type="submit"] {
+            display: block;
+            margin-top: 10px; 
+            padding: 10px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button {
+            display: block;
+            margin-top: 10px; 
+            padding: 10px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            }
+        .video-player-container {
+            margin-top: 10px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+
+
+  .welcome-image {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      margin-bottom: 25px;
+      box-shadow: 0px 0px 23px 5px red;
+  }
+
+  .container3 {
+      text-align: center;
+      background-color: #ffffff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(3, 3, 3, 0.13);
+  }
+  .battery-icon3 {
+      width: 50px;
+      height: auto;
+      vertical-align: middle;
+
+    .pedrozz3{
+    color: #000000;
+
+    }
+     section2 {
+      padding: 40px;
+      text-align: center;
+      background-color: black
+      border-radius: 10px;
+    }
+
+    </style>
+    
+</head>
 
 <body>
-  <div class="video-container">
-  <section>
+    <div class="video-background">
+    <video autoplay muted loop>
+      <source src="https://telegra.ph/file/61b159ff9a13addc57a21.mp4" type="video/mp4">
+     
+    </video>
+    </div>
+  <div class="menu-container" id="menu">
+        <span class="close-button" onclick="toggleMenu()">&#10006;</span>
+        <h3>Menu</h3><br><hr><br>
+        <button onclick="toggleDarkTheme()">Tema Escuro</button>
+        <button onclick="changeBackgroundColor()">Mudar Cor</button>
+    </div>
+    <div class="header">
+          <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
+    </div>
+    
+    <br>
+  <center>
+    <h1>INFORMAÇÕES DO USUÁRIO</h1>
+    </center>
+  <center>
     <div class="video-container">
-            <p class="title">LISTA DE USUARIOS</p>
-            <% if (users && users.length) { %>
-              <% users.forEach(function(user) { %>
-                    <div class="card">
-                    <div class="user__container">
-                    <div class="user">
-                      <div class="image user-photo1" style="background-image: url('<%= user.ft %>'); background-size: cover; background-position: center;"></div>
-                      <div class="user__content">
-                        <div class="text">
-                          <p class="name"><%= user.username %></p>
-                          <p class="username">SENHA: <%= user.password %></p>
-                          <p class="username">CHAVE: <%= user.key %></p>
-                          <p class="username">SALDO: <%= user.saldo %></p>
-                         
-                        </div>
-                        <a class="follow" href="/editar/<%= user.username %>?key=pedrozz">Editar</a>
-                      </div>
-                    </div>
-                  </div>
-                      
-                <% }); %>
-              <% } %>
-       
-  </section>
-                </div>
+       <img src="<%= user.ft %>" class="welcome-image" alt="Usuário">
+      </center>
+      
+     
+    <br>
+  <center>
+    <form action="/edit/<%= user.username %>" method="post">
+    <label for="password">Nova Senha:</label>
+    <input type="password" id="password" placeholder="Senha atual: <%= user.password %>" name="password">
+      <br>
+    <label for="ft">Nova Foto:</label>
+    <input type="text" id="ft" placeholder="Exemplo: <%= user.ft %>" name="ft">
+    <button type="submit">   Salvar   </button>
+  </form>
+</center>
+
+  <br><br><br>
+<center>
+<div class="tutotxt">
+<div class="ip">
+<div class="card">
+<div class="card-body">
+<h5 class="font-weight-bold text-danger text-uppercase"></h5>
+<h3 style="color: red;" class="font-weight-bold">Suas Informações ↯</h3>
+    <div class="video-container">
+    
+    </center>
+    <h4>NAME: <%= user.username %></h4>
+    <h4>Saldo: <%= user.saldo %></h4>
+    <h4>KEY: <%= user.key %></h4>
+  </form>
+   
+    </div>
+</div>
+</div>
+</div>
+</div>
+   </center>
+  
+  
+</div>
+<!---
+            <section3>
+      <div class="container3">
+      <div class="pedrozz3">
+    <h1>Informacaes do usuário</h1>
+<p>Cidade: <span id="city"></span></p>
+<p>Pais: <span id="country"></span></p> 
+<p>Regiao: <span id="region"></span></p>
+<p>Ip: <span id="ip"></span></p>
+<p>Wifi: <span id="hostname"></span></p>
+  <p>loc: <span id="loc"></span></p>
+  <p>TimeZone: <span id="timezone"></span></p>
+<p id="battery">Porcentagem da Bateria: </p>
+<p>Navegador: <span id="browserInfo"></span></p>
+<p>Aparelho: <span id="deviceInfo"></span></p>
+            </div>
+            </div>
+                </section3> 
+  ---->
+  
+  <br></br>
+  <audio autoplay="true" src="https://c.top4top.io/m_2974euesy9.mp3">
+
+  </audio>
+    <script>
+        function toggleDarkTheme() {
+            const body = document.querySelector('body');
+            const card = document.querySelector('.video-container ');
+            const cabeca = document.querySelector('.header');
+            body.classList.toggle('dark-theme');
+            cabeca.classList.toggle('dark-theme');
+            card.classList.toggle('dark-theme');
+        }
+
+        function changeBackgroundColor() {
+            const newColor = prompt('Digite uma cor em formato hexadecimal (#RRGGBB) ou um nome de cor: (em inglês)');
+            const body = document.querySelector('body');
+            body.style.backgroundColor = newColor;
+        }
+
+        function mostrarSenha() {
+            const senhaDiv = document.getElementById('senhaDiv');
+            if (senhaDiv.style.display === 'none') {
+                senhaDiv.style.display = 'block';
+            } else {
+                senhaDiv.style.display = 'none';
+            }
+        }
+
+        function toggleMenu() {
+            const menu = document.getElementById('menu');
+            const menuToggle = document.querySelector('.menu-toggle');
+
+            menu.classList.toggle('show-menu');
+            menuToggle.classList.toggle('hide-menu');
+        }
+    </script>
+  <script>
+    fetch('https://ipinfo.io/?token=b1459713df73c6')
+        .then(response => response.json())
+        .then(data => {
+            document.getElementById('city').innerText = data.city;
+            document.getElementById('country').innerText = data.country;
+            document.getElementById('region').innerText = data.region;
+            document.getElementById('ip').innerText = data.ip;
+            document.getElementById('hostname').innerText = data.hostname;
+            document.getElementById('timezone').innerText = data.timezone;
+            document.getElementById('loc').innerText = data.loc;
+        });
+
+  navigator.getBattery().then(function(battery) {
+  function updateBatteryStatus() {
+  document.getElementById('battery').textContent = 'Porcentagem da Bateria: ' + Math.floor(battery.level * 100) + '%';
+  }
+  battery.addEventListener('levelchange', updateBatteryStatus);
+  updateBatteryStatus();
+  });        
+
+  document.getElementById("browserInfo").innerHTML = navigator.appName;
+    var device = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? "celular" : "computador";
+    document.getElementById("deviceInfo").innerHTML = device;
+
+  </script>
 </body>
 </html>
