--- a/views/index.html
+++ b/views/index.html
@@ -584,8 +584,8 @@ Canal
 <div class="iconbox rounded-4">
 <i class="mdi mdi-youtube"></i>
 </div>
-<h5 class="mt-4 mb-2">Ritinha/Arcanja</h5>
-<p>Primeiro amarás o Corinthians e só assim então poderá amar outro alguém!
+<h5 class="mt-4 mb-2">Redzin</h5>
+<p>Teste
 </p>
 <center><a class="btn" href="/valores">
 <span></span>
